--- a/index.html
+++ b/index.html
@@ -40,45 +40,59 @@
 					</section>
 					<section class="resume-section">
 						<h2 class="section-title">Experience</h2>
-						<ul class="list-group p-2">
-							<li class="list-group-item">
-								<h5>OpenText Pvt. Ltd.</h5>
-								<ul class="list-group p-1">
+						<div class="row">
+							<div class="col-md-4">
+								<ul class="list-group p-2">
 									<li class="list-group-item">
-										<h6>Lead Software Engineer <span class="fw-light  mb-0 fst-italic">| 1 year 12+ months</span></h6>
-										<p class="fw-light  mb-0 fst-italic">02/2023 – present | Bengaluru, India</p>
+										<h5>OpenText Pvt. Ltd.</h5>
+										<ul class="list-group p-1">
+											<li class="list-group-item">
+												<h6>Lead Software Engineer <span class="fw-light  mb-0 fst-italic">| 1 year 12+ months</span></h6>
+												<p class="fw-light  mb-0 fst-italic">02/2023 – present | Bengaluru, India</p>
+											</li>
+										</ul>
+										<ul class="list-group p-1">
+											<li class="list-group-item">
+												<h6>Senior Software Engineer <span class="fw-light  mb-0 fst-italic">| 4 year 8 months</span></h6>
+												<p class="fw-light  mb-0 fst-italic">06/2018 – 02/2023 | Bengaluru, India</p>
+											</li>
+										</ul>
 									</li>
 								</ul>
-								<ul class="list-group p-1">
-									<li class="list-group-item">
-										<h6>Senior Software Engineer <span class="fw-light  mb-0 fst-italic">| 4 year 8 months</span></h6>
-										<p class="fw-light  mb-0 fst-italic">06/2018 – 02/2023 | Bengaluru, India</p>
+							</div>
+							<div class="col-md-4">
+								<ul class="list-group p-2">
+								<li class="list-group-item">
+									<h5>Wipro Technologies Pvt. Ltd.</h5>
+									<ul class="list-group">
+										<li class="list-group-item">
+											<h6>Software Engineer <span class="fw-light  mb-0 fst-italic">| 2 years</span></h6>
+											<p class="fw-light  mb-0 fst-italic">06/2016 – 06/2018 | Bengaluru, India</p>
+										</li>
+											</br>
+											</br>
+											</br>
+									</ul>
 									</li>
 								</ul>
-							</li>
-						</ul>
-						<ul class="list-group p-2">
-							<li class="list-group-item">
-								<h5>Wipro Technologies Pvt. Ltd.</h5>
-								<ul class="list-group">
+							</div>
+							<div class="col-md-4">
+								<ul class="list-group p-2">
 									<li class="list-group-item">
-										<h6>Software Engineer <span class="fw-light  mb-0 fst-italic">| 2 years</span></h6>
-										<p class="fw-light  mb-0 fst-italic">06/2016 – 06/2018 | Bengaluru, India</p>
+										<h5>Spaneos Software Solutions Pvt. Ltd.</h5>
+										<ul class="list-group">
+											<li class="list-group-item">
+												<h6>Software Engineer <span class="fw-light  mb-0 fst-italic">| 3 years</span></h6>
+												<p class="fw-light  mb-0 fst-italic">07/2013 – 06/2016 | Bengaluru, India</p>
+											</li>
+											</br>
+											</br>
+											</br>
+										</ul>
 									</li>
 								</ul>
-							</li>
-						</ul>
-						<ul class="list-group p-2">
-							<li class="list-group-item">
-								<h5>Spaneos Software Solutions Pvt. Ltd.</h5>
-								<ul class="list-group">
-									<li class="list-group-item">
-										<h6>Software Engineer <span class="fw-light  mb-0 fst-italic">| 3 years</span></h6>
-										<p class="fw-light  mb-0 fst-italic">07/2013 – 06/2016 | Bengaluru, India</p>
-									</li>
-								</ul>
-							</li>
-						</ul>
+							</div>
+						</div>
 					</section>
 					<section class="resume-section">
 						<h2 class="section-title">Skills</h2>
