--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="light">
-<head>
-  <meta charset="UTF-8">
+<!-- saved from url=(0036)https://jayeshsyif.github.io/resume/ -->
+<html lang="en" data-bs-theme="light"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume - Jayesh Bharat Ganatra</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="./Resume - Jayesh Bharat Ganatra_files/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       background-color: var(--bs-body-bg);
@@ -35,59 +35,47 @@
 						<section class="resume-section">
 							<h2 class="section-title">Summary</h2>
 							<p>Experienced Software Engineer with over 10+ years in Java development, skilled in all phases of the software development lifecycle. From Planning, Analysis, Architecture, Design, Problem Solving, Implementation to Deployment. 
-	  </br>Proficient in developing B2B software applications. Strong ability to prioritize team tasks, foster collaboration, promote an inclusive work environment. Familiar with Agile methodologies and experienced in Scrum teams. Experience in software applications under B2B information management domain based on several protocols, such as PEPPOL, AS4, AS2, FTP, SFTP, HTTPS, SMTP and more.
+	  <br>Proficient in developing B2B software applications. Strong ability to prioritize team tasks, foster collaboration, promote an inclusive work environment. Familiar with Agile methodologies and experienced in Scrum teams. Experience in software applications under B2B information management domain based on several protocols, such as PEPPOL, AS4, AS2, FTP, SFTP, HTTPS, SMTP and more.
 	  </p>
 					</section>
 					<section class="resume-section">
 						<h2 class="section-title">Experience</h2>
-						<div class="row">
-							<div class="col-md-4">
-								<ul class="list-group p-2">
-									<li class="list-group-item">
-										<h5>OpenText Pvt. Ltd.</h5>
-										<ul class="list-group p-1">
-											<li class="list-group-item">
-												<h6>Lead Software Engineer <span class="fw-light  mb-0 fst-italic">| 1 year 12+ months</span></h6>
+						<div class="card-group">
+							<div class="card">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item">OpenText Pvt. Ltd.
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-normal mb-0">Lead Software Engineer <span class="fw-light  mb-0 fst-italic">| 1 year 12+ months</span></p>
 												<p class="fw-light  mb-0 fst-italic">02/2023 – present | Bengaluru, India</p>
-											</li>
-										</ul>
-										<ul class="list-group p-1">
-											<li class="list-group-item">
-												<h6>Senior Software Engineer <span class="fw-light  mb-0 fst-italic">| 4 year 8 months</span></h6>
+												<p></p>
+												<p class="fw-normal mb-0">Senior Software Engineer <span class="fw-light  mb-0 fst-italic">| 4 year 8 months</span></p>
 												<p class="fw-light  mb-0 fst-italic">06/2018 – 02/2023 | Bengaluru, India</p>
 											</li>
 										</ul>
 									</li>
 								</ul>
 							</div>
-							<div class="col-md-4">
-								<ul class="list-group p-2">
-								<li class="list-group-item">
-									<h5>Wipro Technologies Pvt. Ltd.</h5>
-									<ul class="list-group">
-										<li class="list-group-item">
-											<h6>Software Engineer <span class="fw-light  mb-0 fst-italic">| 2 years</span></h6>
-											<p class="fw-light  mb-0 fst-italic">06/2016 – 06/2018 | Bengaluru, India</p>
-										</li>
-											</br>
-											</br>
-											</br>
-									</ul>
+							<div class="card">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item">Wipro Technologies Pvt. Ltd.
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-normal  mb-0">Software Engineer <span class="fw-light  mb-0 fst-italic">| 2 years</span></p>
+												<p class="fw-light  mb-0 fst-italic">06/2016 – 06/2018 | Bengaluru, India</p>
+											</li>
+										</ul>
 									</li>
 								</ul>
 							</div>
-							<div class="col-md-4">
-								<ul class="list-group p-2">
-									<li class="list-group-item">
-										<h5>Spaneos Software Solutions Pvt. Ltd.</h5>
-										<ul class="list-group">
-											<li class="list-group-item">
-												<h6>Software Engineer <span class="fw-light  mb-0 fst-italic">| 3 years</span></h6>
+							<div class="card">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item">Spaneos Software Solutions Pvt. Ltd.
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-normal  mb-0">Software Engineer <span class="fw-light  mb-0 fst-italic">| 3 years</span></p>
 												<p class="fw-light  mb-0 fst-italic">07/2013 – 06/2016 | Bengaluru, India</p>
 											</li>
-											</br>
-											</br>
-											</br>
 										</ul>
 									</li>
 								</ul>
@@ -96,51 +84,54 @@
 					</section>
 					<section class="resume-section">
 						<h2 class="section-title">Skills</h2>
-						<div class="row">
-							<div class="col-md-3">
-								<ul class="list-group">
+						<div class="card-group">
+							<div class="card">
+								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Backend
-										<ul>
-											<li>Java / J2EE, Spring Core</li>
-											<li>Spring MVC, Spring Boot, JPA, Hibernate</li>
-											<li>REST and SOAP web service</li>
-											</br>
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-light  mb-0">Java / J2EE, Spring Core</p>
+												<p class="fw-light  mb-0">Spring MVC, Spring Boot, JPA, Hibernate</p>
+												<p class="fw-light  mb-0">REST and SOAP web service</p>
+											</li>
 										</ul>
 									</li>
 								</ul>
 							</div>
-							<div class="col-md-3">
-								<ul class="list-group">
+							<div class="card">
+								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Frontend
-										<ul>
-											<li>HTML, JSP (Java Servlet)</li>
-											<li>JavaScript/ jQuery</li>
-											<li>Android</li>
-											</br>
-											</br>
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-light  mb-0">HTML, JSP (Java Servlet)</p>
+												<p class="fw-light  mb-0">JavaScript/ jQuery</p>
+												<p class="fw-light  mb-0">Android</p>
+											</li>
 										</ul>
 									</li>
 								</ul>
 							</div>
-							<div class="col-md-3">
-								<ul class="list-group">
+							<div class="card">
+								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Database
-										<ul>
-											<li>MSSQL, MySQL</li>
-											<li>Oracle 12c, MongoDB, other RDBMS</li>
-											</br>
-											</br>
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-light  mb-0">MSSQL, MySQL</p>
+												<p class="fw-light  mb-0">Oracle 12c, MongoDB, other RDBMS</p>
+											</li>
 										</ul>
 									</li>
 								</ul>
 							</div>
-							<div class="col-md-3">
-								<ul class="list-group">
+							<div class="card">
+								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Version Control and Infra Tech
-										<ul>
-											<li>Maven, Apache Ant</li>
-											<li>Git, Mercurial, TeamCity, Jenkins, Sonar</li>
-											<li>Microservices, Docker, Kubernetes, Apache Kafka</li>
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-light  mb-0">Maven, Apache Ant</p>
+												<p class="fw-light  mb-0">Git, Mercurial, TeamCity, Jenkins, Sonar</p>
+												<p class="fw-light  mb-0">Microservices, Docker, Kubernetes, Apache Kafka</p>
+											</li>
 										</ul>
 									</li>
 								</ul>
@@ -149,20 +140,63 @@
 					</section>
 					<section class="resume-section">
 						<h2 class="section-title">Education</h2>
-						<p>
-							<strong>Bachelor of Engineering</strong> – North Maharashtra University 
-							</br><span class="fw-light  mb-0 fst-italic">06/2009 – 05/2012 | Jalgaon, India</span>
-						</p>
+						<div class="card-group">
+							<div class="card border-0">
+								<ul class="list-group list-group-flush">
+									<li class="list-group-item">Bachelor of Engineering
+										<ul class="list-group-flush">
+											<li class="list-group-item border-start">
+												<p class="fw-light  mb-0"> North Maharashtra University <br><span class="fw-light  mb-0 fst-italic">06/2009 – 05/2012 | Jalgaon, India</span></p>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</div>
+							<div class="card border-0"></div>
+							<div class="card border-0"></div>
+						</div>
 					</section>
 					<section class="resume-section">
 						<h2 class="section-title">Contact</h2>
-						<p>Email: jayeshsyif@gmail.com</p>
-						<p>LinkedIn: <a href="https://www.linkedin.com/in/jayesh-ganatra-76051056">link</a></p>
-						<p>Resume in PDF: <a href="Jayesh_Ganatra_Resume.pdf">link</a></p>
+						<div class="card-group border-0">
+							<div class="card border-0">
+								<ul class="list-group list-group-flush">
+										<li class="list-group-item">Email
+											<ul class="list-group-flush">
+												<li class="list-group-item border-start">
+													<p class="fw-light  mb-0">jayeshsyif@gmail.com</p>
+												</li>
+											</ul>
+										</li>
+								</ul>
+							</div>
+							<div class="card border-0">
+								<ul class="list-group list-group-flush">
+										<li class="list-group-item">LinkedIn
+											<ul class="list-group-flush">
+												<li class="list-group-item border-start">
+													<p class="fw-light  mb-0"><a href="https://www.linkedin.com/in/jayesh-ganatra-76051056">link</a></p>
+												</li>
+											</ul>
+										</li>
+								</ul>
+							</div>
+							<div class="card border-0">
+								<ul class="list-group list-group-flush">
+										<li class="list-group-item">Resume in PDF
+											<ul class="list-group-flush">
+												<li class="list-group-item border-start">
+													<p class="fw-light  mb-0"><a href="Jayesh_Ganatra_Resume.pdf">link</a></p>
+												</li>
+											</ul>
+										</li>
+								</ul>
+							</div>
+						</div>
 					</section>
 				</div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="./Resume - Jayesh Bharat Ganatra_files/bootstrap.bundle.min.js.download"></script>
   <script>
     document.querySelector('.theme-toggle').addEventListener('click', function () {
       const html = document.documentElement;
@@ -170,5 +204,6 @@
       html.setAttribute('data-bs-theme', currentTheme === 'light' ? 'dark' : 'light');
     });
   </script>
-			</body>
-		</html>
+			
+		
+</body></html>
