--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Resume - Jayesh Bharat Ganatra</title>
-  <link href="./Resume - Jayesh Bharat Ganatra_files/bootstrap.min.css" rel="stylesheet">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
       background-color: var(--bs-body-bg);
@@ -196,7 +196,7 @@
 					</section>
 				</div>
 
-  <script src="./Resume - Jayesh Bharat Ganatra_files/bootstrap.bundle.min.js.download"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script>
     document.querySelector('.theme-toggle').addEventListener('click', function () {
       const html = document.documentElement;
