--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<section class="resume-section">
 						<h2 class="section-title">Experience</h2>
 						<div class="card-group">
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">OpenText Pvt. Ltd.
 										<ul class="list-group-flush">
@@ -56,7 +56,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Wipro Technologies Pvt. Ltd.
 										<ul class="list-group-flush">
@@ -68,7 +68,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Spaneos Software Solutions Pvt. Ltd.
 										<ul class="list-group-flush">
@@ -85,7 +85,7 @@
 					<section class="resume-section">
 						<h2 class="section-title">Skills</h2>
 						<div class="card-group">
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Backend
 										<ul class="list-group-flush">
@@ -98,7 +98,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Frontend
 										<ul class="list-group-flush">
@@ -111,7 +111,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Database
 										<ul class="list-group-flush">
@@ -123,7 +123,7 @@
 									</li>
 								</ul>
 							</div>
-							<div class="card">
+							<div class="card border-0">
 								<ul class="list-group list-group-flush">
 									<li class="list-group-item">Version Control and Infra Tech
 										<ul class="list-group-flush">
