--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 </head>
 				<body>
 					<div class="container">
-						<header class="text-center my-4">
+						<header class="text-center my-4 bg-secondary text-white">
 							<h1>Jayesh Bharat Ganatra</h1>
-							<p class="lead">Lead Software Engineer | <span class="fw-light  mb-0 fst-italic">Bangalore,India</span></p>
-							<button class="btn btn-secondary theme-toggle">Toggle Dark Mode</button>
+							<p class="lead">Lead Software Engineer | <span class="fw-light  mb-0 fst-italic">Bangalore,India</span></p>			
 						</header>
+						<button class="btn btn-secondary theme-toggle">Toggle Dark Mode</button>
 						<section class="resume-section">
-							<h2 class="section-title">Summary</h2>
+							<h2 class="section-title">Profile</h2>
 							<p>Experienced Software Engineer with over 10+ years in Java development, skilled in all phases of the software development lifecycle. From Planning, Analysis, Architecture, Design, Problem Solving, Implementation to Deployment. 
 	  <br>Proficient in developing B2B software applications. Strong ability to prioritize team tasks, foster collaboration, promote an inclusive work environment. Familiar with Agile methodologies and experienced in Scrum teams. Experience in software applications under B2B information management domain based on several protocols, such as PEPPOL, AS4, AS2, FTP, SFTP, HTTPS, SMTP and more.
 	  </p>
