--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 </head>
 <body>
 
-<div class="container-lg">
-	<header class="text-center my-4 bg-secondary bg-gradient text-white">
-		<h1>Jayesh Bharat Ganatra</h1>
-		<p class="lead">Lead Software Engineer | <span class="fw-light  mb-0 fst-italic">Bangalore, India</span>
-		</p>
-	</header>
-	<button class="btn btn-secondary theme-toggle">Toggle Dark Mode</button>
+<div class="container-lg bg-light">
+	<section class="resume-section">
+		<header class="text-center m-4 bg-dark text-white rounded">
+			<h1>Jayesh Ganatra</h1>
+			<p class="lead text-center">Lead Software Engineer | <span class="fw-light  mb-0 fst-italic">Bangalore, India</span>
+			</p>
+		</header>
+	</section>
+	<!-- <button class="btn btn-secondary theme-toggle">Toggle Dark Mode</button> -->
 	<section class="resume-section">
 		<p class="section-title fs-3">Profile</p>
 		<p class="fs-6 fw-normal lh-sm">Experienced Software Engineer with over 10+ years in Java development, skilled in all phases of the software development lifecycle. From Planning, Analysis, Architecture, Design, Problem Solving, Implementation to Deployment. 
@@ -51,9 +53,9 @@
 				<div class="row">
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">OpenText Pvt. Ltd.
+							<li class="list-group-item bg-light">OpenText Pvt. Ltd.
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-normal mb-0">Lead Software Engineer
 										</p>
 										<p class="fw-light text-xsmall mb-0 fst-italic">02/2023 – present <span class="fw-light  mb-0 fst-italic"> | 1 year 12+ months</span> | Bengaluru, India</p>
@@ -70,9 +72,9 @@
 				<div class="row">
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Wipro Technologies Pvt. Ltd.
+							<li class="list-group-item bg-light">Wipro Technologies Pvt. Ltd.
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-normal  mb-0">Software Engineer
 										</p>
 										<p class="fw-light text-xsmall mb-0 fst-italic">06/2016 – 06/2018 <span class="fw-light  mb-0 fst-italic"> | 2 years</span> | Bengaluru, India</p>
@@ -83,9 +85,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Spaneos Software Solutions Pvt. Ltd.
+							<li class="list-group-item bg-light">Spaneos Software Solutions Pvt. Ltd.
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-normal  mb-0">Software Engineer
 										</p>
 										<p class="fw-light text-xsmall mb-0 fst-italic">07/2013 – 06/2016 <span class="fw-light  mb-0 fst-italic"> | 3 years</span> | Bengaluru, India</p>
@@ -103,9 +105,9 @@
 				<div class="row">
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Backend
+							<li class="list-group-item bg-light">Backend
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Java / J2EE, Spring Core</p>
 										<p class="fw-light text-xsmall mb-0">Spring MVC, Spring Boot, JPA, Hibernate</p>
 										<p class="fw-light text-xsmall mb-0">REST and SOAP web service</p>
@@ -116,9 +118,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Frontend
+							<li class="list-group-item bg-light">Frontend
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">HTML, JSP (Java Servlet)</p>
 										<p class="fw-light text-xsmall mb-0">JavaScript/ jQuery</p>
 										<p class="fw-light text-xsmall mb-0">Android</p>
@@ -131,9 +133,9 @@
 				<div class="row">
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Database
+							<li class="list-group-item bg-light">Database
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">MSSQL, MySQL</p>
 										<p class="fw-light text-xsmall mb-0">Oracle 12c, MongoDB, other RDBMS</p>
 									</li>
@@ -143,9 +145,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Version Control and Infra Tech
+							<li class="list-group-item bg-light">Version Control and Infra Tech
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Maven, Apache Ant</p>
 										<p class="fw-light text-xsmall mb-0">Git, Mercurial, TeamCity, Jenkins, Sonar</p>
 										<p class="fw-light text-xsmall mb-0">Microservices, Docker, Kubernetes, Apache Kafka</p>
@@ -165,9 +167,9 @@
 				<div class="row">
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Bachelor of Engineering <span class="fw-light text-xsmall mb-0 fst-italic">| 62.13%</span>
+							<li class="list-group-item bg-light">Bachelor of Engineering <span class="fw-light text-xsmall mb-0 fst-italic">| 62.13%</span>
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">North Maharashtra University<br/>
 											<span class="fw-light text-xsmall mb-0 fst-italic">06/2009 – 05/2012 | Jalgaon, India</span>
 										</p>
@@ -178,9 +180,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Diploma in Information Technology <span class="fw-light text-xsmall mb-0 fst-italic">|  72.60%</span>
+							<li class="list-group-item bg-light">Diploma in Information Technology <span class="fw-light text-xsmall mb-0 fst-italic">|  72.60%</span>
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Maharashtra State Board of Technical  Education University<br/>
 											<span class="fw-light text-xsmall mb-0 fst-italic">06/2006 – 05/2009 | Mumbai, India</span>
 										</p>
@@ -191,9 +193,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">SSC <span class="fw-light text-xsmall mb-0 fst-italic">|  76.13%</span>
+							<li class="list-group-item bg-light">SSC <span class="fw-light text-xsmall mb-0 fst-italic">|  76.13%</span>
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Maharashtra State Secondary & Higher Secondary Education University<br/>
 											<span class="fw-light text-xsmall mb-0 fst-italic">2006 | Mumbai, India</span>
 										</p>
@@ -211,15 +213,15 @@
 				<div class="row">
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Open-Source contribution 
+							<li class="list-group-item bg-light">Open-Source contribution 
 								<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none">link 
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 									  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 									  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
 									</svg>
 								</a>
-									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<ul class="list-group-flush bg-light">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Password Management App | Android<br/>
 											<span class="fw-light text-xsmall mb-0 fst-italic">Professional-grade security application integrating KeePass library with intuitive Material Design interface, officially recognized on project platform.</span>
 										</p>
@@ -230,9 +232,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Application Certification Completion | Recognition
+							<li class="list-group-item bg-light">Application Certification Completion | Recognition
 									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">OpenText Pvt. Ltd.| 31/05/2024<br/>
 											<span class="fw-light text-xsmall mb-0 fst-italic">AS4 CEF common profile Certification awarded to BizManager, which was a long awaiting certification, signifies the company's proficiency in adhering to the AS4 standards ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.</span>
 										</p>
@@ -243,9 +245,9 @@
 					</div>
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
-							<li class="list-group-item">Knight of Quarter | Award
-									<ul class="list-group-flush">
-									<li class="list-group-item border-start">
+							<li class="list-group-item bg-light">Knight of Quarter | Award
+									<ul class="list-group-flush bg-light">
+									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Wipro Techionologies | 30/11/2017<br/>
 											<span class="fw-light text-xsmall mb-0 fst-italic">Perfromance improvement to search module development in Way2Go product, delivering breakthrough 45% performance enhancement.</span>
 										</p>
@@ -263,9 +265,9 @@
 		<div class="card-group border-0">
 			<div class="card border-0">
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item">Email
+					<li class="list-group-item bg-light">Email
 								<ul class="list-group-flush">
-							<li class="list-group-item border-start">
+							<li class="list-group-item border-start bg-light">
 								<p class="fw-light  mb-0">jayeshsyif@gmail.com</p>
 							</li>
 						</ul>
@@ -274,27 +276,27 @@
 			</div>
 			<div class="card border-0">
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item">LinkedIn
-								<ul class="list-group-flush">
-							<li class="list-group-item border-start">
-								<p class="fw-light  mb-0">
-									<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none">link 
-										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
-										  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
-										  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
-										</svg>
-									</a>
-								</p>
-							</li>
+					<li class="list-group-item bg-light">LinkedIn
+							<ul class="list-group-flush bg-light">
+								<li class="list-group-item border-start bg-light">
+									<p class="fw-light  mb-0">
+										<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none">link 
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+											  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
+											  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+											</svg>
+										</a>
+									</p>
+								</li>
 						</ul>
 					</li>
 				</ul>
 			</div>
 			<div class="card border-0">
 				<ul class="list-group list-group-flush">
-					<li class="list-group-item">Resume in PDF
-								<ul class="list-group-flush">
-							<li class="list-group-item border-start">
+					<li class="list-group-item bg-light">Resume in PDF
+								<ul class="list-group-flush bg-light">
+							<li class="list-group-item border-start bg-light">
 								<p class="fw-light  mb-0">
 									<a href="Jayesh_Ganatra_Resume.pdf" class="text-decoration-none">link 
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
