--- a/index.html
+++ b/index.html
@@ -31,16 +31,33 @@
 <body>
 
 <div class="container-lg bg-light">
-	<section class="resume-section">
-		<header class="text-center m-4 bg-dark text-white rounded">
-			<h1>Jayesh Ganatra</h1>
-			<p class="lead text-center">Lead Software Engineer | <span class="fw-light  mb-0 fst-italic">Bangalore, India</span>
-			</p>
+	<section class="resume-section bg-dark rounded">
+		<header class="text-center m-2 text-white">
+			<h1 class="display-3">Jayesh Ganatra</h1>
+			<div class="row">
+				<div class="col-sm">
+					<p class="fw-light text-start mb-0">+91-9590102022</p>
+				</div>
+				<div class="col-sm">
+					<p class="fw-light text-center mb-0">Lead Software Engineer</p>
+				</div>
+				<div class="col-sm">
+					<p class="fw-light text-end mb-0">
+						Bengaluru, India
+					</p>
+				</div>
+			</div>
 		</header>
 	</section>
 	<!-- <button class="btn btn-secondary theme-toggle">Toggle Dark Mode</button> -->
 	<section class="resume-section">
-		<p class="section-title fs-3">Profile</p>
+		<p class="section-title fs-3">Profile
+			<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none"> 
+				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+						<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+				</svg>
+			</a>
+		</p>
 		<p class="fs-6 fw-normal lh-sm">Experienced Software Engineer with over 10+ years in Java development, skilled in all phases of the software development lifecycle. From Planning, Analysis, Architecture, Design, Problem Solving, Implementation to Deployment. 
 		</p>
 		<p class="fs-6 fw-normal lh-sm">Proficient in developing B2B software applications. Strong ability to prioritize team tasks, foster collaboration, promote an inclusive work environment. Familiar with Agile methodologies and experienced in Scrum teams. Experience in software applications under B2B information management domain based on several protocols, such as PEPPOL, AS4, AS2, FTP, SFTP, HTTPS, SMTP and more.
@@ -280,10 +297,9 @@
 							<ul class="list-group-flush bg-light">
 								<li class="list-group-item border-start bg-light">
 									<p class="fw-light  mb-0">
-										<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none">link 
-											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
-											  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
-											  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
+										<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none"> 
+											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+												<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
 											</svg>
 										</a>
 									</p>
@@ -298,7 +314,7 @@
 								<ul class="list-group-flush bg-light">
 							<li class="list-group-item border-start bg-light">
 								<p class="fw-light  mb-0">
-									<a href="Jayesh_Ganatra_Resume.pdf" class="text-decoration-none">link 
+									<a href="Jayesh_Ganatra_Resume.pdf" class="text-decoration-none"> 
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 										  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 										  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
