--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
 	.text-xsmall{
 		font-size: 13px;
 	}
+	.text-top-strikethrough {
+      position: relative;
+      display: inline-block;
+    }
+    .text-top-strikethrough::before {
+      content: '';
+      position: absolute;
+      top: 0; /* Adjust this value for precise placement */
+      right: 0;
+      width: 100%;
+      height: 1px; /* Thickness of the line */
+      background-color: currentColor; /* Matches text color */
+    }
   </style>
 </head>
 <body>
@@ -52,7 +65,7 @@
 	<!-- <button class="btn btn-secondary theme-toggle">Toggle Dark Mode</button> -->
 	<section class="resume-section">
 		<p class="section-title fs-3">Profile
-			<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none"> 
+			<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none d-print-none"> 
 				<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
 						<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
 				</svg>
@@ -231,7 +244,7 @@
 					<div class="col-md-auto">
 						<ul class="list-group list-group-flush">
 							<li class="list-group-item bg-light">Open-Source contribution 
-								<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none">link 
+								<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none"> 
 									<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 									  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 									  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
@@ -240,7 +253,7 @@
 									<ul class="list-group-flush bg-light">
 									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Password Management App | Android<br/>
-											<span class="fw-light text-xsmall mb-0 fst-italic">Professional-grade security application integrating KeePass library with intuitive Material Design interface, officially recognized on project platform.</span>
+											<span class="fw-light text-xsmall mb-0 fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Professional-grade security application integrating KeePass library with intuitive Material Design interface, officially recognized on project platform.</span>
 										</p>
 									</li>
 								</ul>
@@ -253,7 +266,7 @@
 									<ul class="list-group-flush">
 									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">OpenText Pvt. Ltd.| 31/05/2024<br/>
-											<span class="fw-light text-xsmall mb-0 fst-italic">AS4 CEF common profile Certification awarded to BizManager, which was a long awaiting certification, signifies the company's proficiency in adhering to the AS4 standards ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.</span>
+											<span class="fw-light text-xsmall mb-0 fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AS4 CEF common profile Certification awarded to BizManager, which was a long awaiting certification, signifies the company's proficiency in adhering to the AS4 standards ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.</span>
 										</p>
 									</li>
 								</ul>
@@ -266,7 +279,77 @@
 									<ul class="list-group-flush bg-light">
 									<li class="list-group-item border-start bg-light">
 										<p class="fw-light text-xsmall mb-0">Wipro Techionologies | 30/11/2017<br/>
-											<span class="fw-light text-xsmall mb-0 fst-italic">Perfromance improvement to search module development in Way2Go product, delivering breakthrough 45% performance enhancement.</span>
+											<span class="fw-light text-xsmall mb-0 fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Perfromance improvement to search module development in Way2Go product, delivering breakthrough 45% performance enhancement.</span>
+										</p>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+		</div>
+	</div>
+	<div class="row">
+		<div class="col-sm">
+			<section class="resume-section">
+				<p class="section-title fs-3">Projects</p>
+				<div class="row">
+					<div class="col-md">
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item bg-light">BizManager <span class="fw-light text-xsmall mb-0 fst-italic">| 06/2018 – present</span>
+									<ul class="list-group-flush">
+									<li class="list-group-item border-start bg-light">
+										<p class="fw-light text-xsmall mb-0">Information managing domain<br/>
+											<span class="fw-light text-xsmall mb-0 fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.</span>
+										</p>
+									</li>
+									<li class="list-group-item border-start bg-light">
+										<p class="fw-light text-xsmall mb-0"><span class="fw-light text-xsmall mb-0 fst-italic">Role:
+										<br/>&nbsp;&nbsp;Lead Software Engineer (10 members)
+										</span>
+										</p>
+									</li>
+									<li class="list-group-item border-start bg-light">
+										<p class="fw-light text-xsmall mb-0"><span class="fw-light text-xsmall mb-0 fst-italic">
+										 Responsibilities: 
+										 <br/>&nbsp;&nbsp;Mentoring team members and holding developer meetings.
+										 <br/>&nbsp;&nbsp;Removing blockers and facilitating regular technical touch-point meetings with other teams. 
+										 <br/>&nbsp;&nbsp;Enhanced monitoring module to identify crash and performance related issues. 
+										 <br/>&nbsp;&nbsp;R&D on new frameworks & features to enhance product capabilities. 
+										 <br/>&nbsp;&nbsp;To design solutions for complex CRs and develop new modules. 
+										 <br/>&nbsp;&nbsp;Responsible for production bug troubleshoot and fixes. 
+										 <br/>&nbsp;&nbsp;Leading demos.
+										</span>
+										</p>
+									</li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+					<div class="col-md">
+						<ul class="list-group list-group-flush">
+							<li class="list-group-item bg-light">Way2Go <span class="fw-light text-xsmall mb-0 fst-italic">| 06/2016 – 06/2018</span>
+									<ul class="list-group-flush">
+									<li class="list-group-item border-start bg-light">
+										<p class="fw-light text-xsmall mb-0">Travel & Expense domain<br/>
+											<span class="fw-light text-xsmall mb-0 fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A B2B product to ease the corporate organization’s travel and expense division with ERP and Global Distribution System (GDS) integration. The product also features the data analysis portal to provide various ways to highlight the travel and expense reports. Large and small organizations can easily track business travel and expense anytime and anywhere.
+											</span>
+										</p>
+									</li>
+									<li class="list-group-item border-start bg-light">
+										<p class="fw-light text-xsmall mb-0"><span class="fw-light text-xsmall mb-0 fst-italic">Role:
+										<br/>&nbsp;&nbsp;Developer (Team Member– 12 members)
+										</span>
+										</p>
+									</li>
+									<li class="list-group-item border-start bg-light">
+										<p class="fw-light text-xsmall mb-0"><span class="fw-light text-xsmall mb-0 fst-italic">
+										 Responsibilities: 
+										 <br/>&nbsp;&nbsp;Analyses and discuss the business requirements.
+										 <br/>&nbsp;&nbsp;Responsible for the feature development and implementation.
+										 <br/>&nbsp;&nbsp;Responsible for bug fixing and troubleshooting.
+										</span>
 										</p>
 									</li>
 								</ul>
@@ -291,27 +374,27 @@
 					</li>
 				</ul>
 			</div>
-			<div class="card border-0">
+			<div class="card border-0 d-print-none">
 				<ul class="list-group list-group-flush">
 					<li class="list-group-item bg-light">LinkedIn
-							<ul class="list-group-flush bg-light">
-								<li class="list-group-item border-start bg-light">
-									<p class="fw-light  mb-0">
-										<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none"> 
-											<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-												<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-											</svg>
-										</a>
-									</p>
-								</li>
+						<ul class="list-group-flush bg-light">
+							<li class="list-group-item border-start bg-light">
+								<p class="fw-light  mb-0">
+									<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none d-print-none"> 
+										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+											<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+										</svg>
+									</a>
+								</p>
+							</li>
 						</ul>
 					</li>
 				</ul>
 			</div>
-			<div class="card border-0">
+			<div class="card border-0 d-print-none">
 				<ul class="list-group list-group-flush">
 					<li class="list-group-item bg-light">Resume in PDF
-								<ul class="list-group-flush bg-light">
+						<ul class="list-group-flush bg-light">
 							<li class="list-group-item border-start bg-light">
 								<p class="fw-light  mb-0">
 									<a href="Jayesh_Ganatra_Resume.pdf" class="text-decoration-none"> 
@@ -327,6 +410,11 @@
 				</ul>
 			</div>
 		</div>
+	</section>
+	<section class="resume-section d-none d-print-block">
+		<p class="section-title fs-3">Declaration</p>
+		<br/> <br/> <br/>
+		<p class="text-end">Jayesh Ganatra</p>
 	</section>
 </div>
 
