--- a/index.html
+++ b/index.html
@@ -279,16 +279,17 @@
 						<li class="list-group-item bg-light mb-0 p-0">Bachelor of Engineering
 							<ul class="list-group-flush">
 								<li class="list-group-item border-start bg-light">
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">62.13%</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										62.13%
 									</p>
-									<p class="fw-light text-xsmall mb-0">North Maharashtra University
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										06/2009 – 05/2012
 									</p>
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">06/2009 – 05/2012</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										North Maharashtra University
 									</p>
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">Jalgaon, India</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										Jalgaon, India
 									</p>
 								</li>
 							</ul>
@@ -298,35 +299,37 @@
 						<li class="list-group-item bg-light mb-0 p-0">Diploma in Information Technology
 								<ul class="list-group-flush">
 								<li class="list-group-item border-start bg-light">
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">72.60%</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										72.60%
 									</p>
-									<p class="fw-light text-xsmall mb-0">Maharashtra State Board of Technical  Education University
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										06/2006 – 05/2009
 									</p>
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">06/2006 – 05/2009</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										Maharashtra State Board of Technical  Education University
 									</p>
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">Mumbai, India</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										Mumbai, India
 									</p>
 								</li>
 							</ul>
 						</li>
 					</ul>
 					<ul class="list-group list-group-flush">
-						<li class="list-group-item bg-light mb-0 p-0">SSC
+						<li class="list-group-item bg-light mb-0 p-0">Secondary School Certificate (SSC)
 								<ul class="list-group-flush">
 								<li class="list-group-item border-start bg-light">
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">76.13%</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										76.13%
 									</p>
-									<p class="fw-light text-xsmall mb-0">Maharashtra State Secondary & Higher Secondary Education University
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										2006
 									</p>
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">2006</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										Maharashtra State Secondary &amp; Higher Secondary Education University
 									</p>
-									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">Mumbai, India</span>
+									<p class="fw-light text-xsmall mb-0 fst-italic">
+										Mumbai, India
 									</p>
 								</li>
 							</ul>
@@ -344,24 +347,35 @@
 							<span class="fw-light text-xsmall mb-0 fst-italic"> (06/2018 – present)</span>
 							<ul class="list-group-flush">
 								<li class="list-group-item border-start bg-light">
-									<p class="fw-light text-xsmall mb-0">Domain:
-									</p>
 									<p class="fw-light text-xsmall mb-0">Information Managing domain
 									</p>
 									<p class="fw-light border-top text-xsmall fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.
 									</p>
-									<p class="fw-light text-xsmall mb-0">Role & Responsibilities:
+									<p class="fw-light text-xsmall mb-0 border-bottom">Role &amp; Responsibilities:
 									</p>
-									<p class="fw-light border-top text-xsmall fst-italic">
-										 Lead Software Engineer (10 members)
-										 <br/>&nbsp;&nbsp;Mentoring team members and holding developer meetings.
-										 <br/>&nbsp;&nbsp;Removing blockers and facilitating regular technical touch-point meetings with other teams. 
-										 <br/>&nbsp;&nbsp;Enhanced monitoring module to identify crash and performance related issues. 
-										 <br/>&nbsp;&nbsp;R&D on new frameworks & features to enhance product capabilities. 
-										 <br/>&nbsp;&nbsp;To design solutions for complex CRs and develop new modules. 
-										 <br/>&nbsp;&nbsp;Responsible for production bug troubleshoot and fixes. 
-										 <br/>&nbsp;&nbsp;Leading demos.
-										</span>
+									<p class="fw-light text-xsmall mb-0">
+									Lead Software Engineer (10 members)
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Mentoring team members and holding developer meetings
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Removing blockers and facilitating regular technical touch-point meetings with other teams. 
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Enhanced monitoring module to identify crash and performance related issues. 
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;R&amp;D on new frameworks &amp; features to enhance product capabilities. 
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;To design solutions for complex CRs and develop new modules. 
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Responsible for production bug troubleshoot and fixes. 
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Leading demos.
 									</p>
 								</li>
 							</ul>
@@ -371,20 +385,23 @@
 						<li class="list-group-item bg-light mb-0 p-0">Way2Go <span class="fw-light text-xsmall mb-0 fst-italic">| 06/2016 – 06/2018</span>
 								<ul class="list-group-flush">
 								<li class="list-group-item border-start bg-light">
-									<p class="fw-light text-xsmall mb-0">Domain:
-									</p>
 									<p class="fw-light text-xsmall mb-0">Travel & Expense domain
 									</p>
 									<p class="fw-light border-top text-xsmall fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; A B2B product to ease the corporate organization’s travel and expense division with ERP and Global Distribution System (GDS) integration. The product also features the data analysis portal to provide various ways to highlight the travel and expense reports. Large and small organizations can easily track business travel and expense anytime and anywhere.
 									</p>
-									<p class="fw-light text-xsmall mb-0">Role & Responsibilities:
+									<p class="fw-light text-xsmall mb-0 border-bottom">Role &amp; Responsibilities:
 									</p>
-									<p class="fw-light border-top text-xsmall fst-italic">
-										 Developer (Team Member– 12 members)
-										<br/>&nbsp;&nbsp;Analyses and discuss the business requirements.
-										 <br/>&nbsp;&nbsp;Responsible for the feature development and implementation.
-										 <br/>&nbsp;&nbsp;Responsible for bug fixing and troubleshooting.
-										</span>
+									<p class="fw-light text-xsmall mb-0 ml-1">
+										Developer (Team Member– 12 members)
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Analyses and discuss the business requirements.
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Responsible for the feature development and implementation.
+									</p>
+									<p class="fw-light text-xsmall fst-italic mb-0 ml-1">
+										&nbsp;&nbsp;&nbsp;Responsible for bug fixing and troubleshooting.
 									</p>
 								</li>
 							</ul>
