--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 		</div>
 		<div class="col-sm">
 			<section class="resume-section">
-				<p class="section-title">Archivements</p>
+				<p class="section-title">Achievements</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item bg-light mb-0 p-0">Open-Source contribution 
 							<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none"> 
@@ -236,7 +236,7 @@
 										 Password Management App
 									</p>
 									<p class="fw-light text-xsmall mb-0">
-										<span class="fst-italic">Navtive Android Application</span>
+										<span class="fst-italic">Native Android Application</span>
 									</p>
 									<p class="fw-light text-xsmall mb-0 border-top fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Professional-grade security application integrating KeePass library with intuitive Material Design interface, officially recognized on project platform.
 									</p>
@@ -251,7 +251,7 @@
 									<p class="fw-light text-xsmall mb-0">
 										<span class="fst-italic">OpenText (31/05/2024)</span>
 									</p>
-									<p class="fw-light text-xsmall mb-0 border-top fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AS4 CEF common profile Certification awarded to BizManager, which was a long awaiting certification, signifies the company's proficiency in adhering to the AS4 standards ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.
+									<p class="fw-light text-xsmall mb-0 border-top fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;AS4 CEF common profile Certification awarded to BizManager, which was a long-awaited certification, signifies the company's proficiency in adhering to the AS4 standards, ensuring compliance with regulatory requirements for our partners, customers, and stakeholders.
 									</p>
 								</li>
 							</ul>
@@ -347,9 +347,9 @@
 							<span class="fw-light text-xsmall mb-0 fst-italic"> (06/2018 – present)</span>
 							<ul class="list-group-flush">
 								<li class="list-group-item border-start bg-light">
-									<p class="fw-light text-xsmall mb-0">Information Managing domain
+									<p class="fw-light text-xsmall mb-0">Information Management domain
 									</p>
-									<p class="fw-light border-top text-xsmall fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;An B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.
+									<p class="fw-light border-top text-xsmall fst-italic">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;A B2B application that allows customers to configure and manage file transfers between applications using several protocols, such as PEPPOL, AS4/AS2, FTP, SFTP, HTTPS, and SMTP, as well as produce reports and audit transactions involving file transfers. Administrators can manage users, services and gateways, password policies, and download service logs. The application provides Administrator users and non-admin users whose access can be defined according to their role.
 									</p>
 									<p class="fw-light text-xsmall mb-0 border-bottom">Role &amp; Responsibilities:
 									</p>
