--- a/index.html
+++ b/index.html
@@ -7,8 +7,31 @@
   <meta name="description" content="Resume of Jayesh Bharat Ganatra, Lead Software Engineer">
   <title>Resume - Jayesh Bharat Ganatra</title>
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Fira+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+
+
   <style>
   
+  .fira-mono-regular {
+	  font-family: "Fira Mono", monospace;
+	  font-weight: 400;
+	  font-style: normal;
+	}
+
+	.fira-mono-medium {
+	  font-family: "Fira Mono", monospace;
+	  font-weight: 500;
+	  font-style: normal;
+	}
+
+	.fira-mono-bold {
+	  font-family: "Fira Mono", monospace;
+	  font-weight: 700;
+	  font-style: normal;
+	}
+
 	html {
 	  font-size: 13.176471px;
 	}
@@ -136,7 +159,7 @@
 </head>
 <body>
 
-<div class="container-lg bg-light customizedContainer">
+<div class="container-lg bg-light customizedContainer fira-mono-regular">
 	<section class="resume-section bg-dark rounded">
 		<header class="text-center m-2 text-white">
 			<h1 class="display-3">Jayesh Ganatra</h1>
@@ -166,7 +189,7 @@
 	<div class="row">
 		<div class="col-sm">
 			<section class="resume-section fade-right-container" style="--delay: 0s;">
-				<p class="section-title">Profile
+				<p class="section-title">Profile dg
 					<a href="https://www.linkedin.com/in/jayesh-ganatra-76051056" class="text-decoration-none d-print-none"> 
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin pulse-container" viewBox="0 0 16 16">
 								<path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
