--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 									</p>
 									<div class="row">
 										<p class="col-8 text-start fw-light small mb-0">
-											02/2023 – present (1 year 12+ months)
+											02/2023 – present &nbsp; &bull; &nbsp; 1 year 12+ months
 										</p>
 										<p class="col-4 text-end fw-light small mb-0">
 											Bengaluru, India
@@ -236,7 +236,7 @@
 									</p>
 									<div class="row">
 										<p class="col-8 text-start fw-light small mb-0">
-											06/2018 – 02/2023 (4 years 8 months)
+											06/2018 – 02/2023 &nbsp; &bull; &nbsp; 4 years 8 months
 										</p>
 										<p class="col-4 text-end fw-light small mb-0">
 											Bengaluru, India
@@ -254,7 +254,7 @@
 									</p>
 									<div class="row">
 										<p class="col-8 text-start fw-light small mb-0">
-											06/2016 – 06/2018 (2 years)
+											06/2016 – 06/2018 &nbsp; &bull; &nbsp; 2 years
 										</p>
 										<p class="col-4 text-end fw-light small mb-0">
 											Bengaluru, India
@@ -272,7 +272,8 @@
 									</p>
 									<div class="row">
 										<p class="col-8 text-start fw-light small mb-0">
-											07/2013 – 06/2016 (3 years)									</p>
+											07/2013 – 06/2016 &nbsp; &bull; &nbsp; 3 years
+										</p>
 										<p class="col-4 text-end fw-light small mb-0">
 											Bengaluru, India
 										</p>
@@ -451,7 +452,7 @@
 				<p class="section-title text-secondary bold">Contribution</p>
 					<ul class="list-group list-group-flush">
 						<li class="list-group-item  mb-0 p-0">Open-Source contribution 
-							<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none"> 
+							<a href="https://play.google.com/store/apps/details?id=org.j_keepass" class="text-decoration-none d-print-none"> 
 								<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 								  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 								  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
@@ -495,7 +496,7 @@
 									<p class="fw-light small mt-1 mb-0">Role &amp; Responsibilities:
 									</p>
 									<p class="fw-light small mt-1 mb-0">
-									Lead Software Engineer (10 members)
+									Lead Software Engineer  &nbsp; &bull; &nbsp; 10 members
 									</p>
 									<p class="fw-light mt-1 small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Mentoring team members and holding developer meetings
@@ -534,7 +535,7 @@
 									<p class="fw-light small mt-1 mb-0">Role &amp; Responsibilities:
 									</p>
 									<p class="fw-light small mt-1 mb-0 ml-1">
-										Developer (Team Member– 12 members)
+										Developer (Team Member &nbsp; &bull; &nbsp; 12 members)
 									</p>
 									<p class="fw-light mt-1 small mb-0 ml-1">
 										&nbsp;&nbsp;&nbsp;Analyses and discuss the business requirements.
@@ -589,12 +590,12 @@
 						<ul class="list-group-flush ">
 							<li class="list-group-item border-start ">
 								<p class="fw-light  mb-0">
-									<a href="Jayesh_Ganatra_Resume.pdf" class="text-decoration-none"> 
+									<button onclick="window.print()" type="button" class="btn text-decoration-none"> 
 										<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
 										  <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5"/>
 										  <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0z"/>
 										</svg>
-									</a>
+									</button>
 								</p>
 							</li>
 						</ul>
